--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "^3.0.1",
     "scrollreveal": "^4.0.9",
     "styled-components": "^6.0.8",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
